[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-validator"
version = "0.1.0"
description = "Library to validate chatbot responses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["nltk"]
authors = [{name = "Pato Miner", email = "patominer@gmail.com"}]
keywords = ["chatbot", "validation", "testing", "LLM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.package-data]
llm_validator = ["semantic_data/*.json"]